Change logging for compile task